# trading

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  pyproject.toml
.claude/skills/backtest-expert/: SKILL.md
.claude/skills/log-diagnose/: SKILL.md
.claude/skills/risk-analysis/: SKILL.md
.claude/skills/signal-generation/: SKILL.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/backtest/: engine.py  metrics.py
app/core/: domain.py  enums.py  events.py  exceptions.py  registry.py
app/data/: database.py  ingestion.py  models.py  repositories.py
app/data/migrations/: env.py  script.py.mako
app/execution/: runner.py  strategy_loader.py
app/notifications/: telegram.py  telegram_commands.py
app/providers/: __init__.py  base.py  capabilities.py
app/providers/alpaca/: config.py  mappers.py  provider.py
app/risk/: earnings_calendar.py  manager.py  position_sizer.py  regime.py
app/strategies/: __init__.py  adx_ema_trend.py  base.py  bollinger_bands.py  breakout.py  ma_crossover.py  macd_crossover.py  rsi_mean_reversion.py
app/web/: auth.py  main.py
app/web/routes/: api.py  dashboard.py
app/web/static/: style.css
app/web/templates/: base.html  dashboard.html
config/: earnings_overrides.yaml  risk_global.yaml
config/param_grids/: adx_ema_trend.yaml  bollinger_bands.yaml  macd_crossover.yaml  rsi_mean_reversion.yaml
config/strategies/: adx_ema_trend.yaml  bollinger_bands.yaml  breakout.yaml  ma_crossover.yaml  macd_crossover.yaml  rsi_mean_reversion.yaml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: glossaire.md  guide-utilisation.md
scripts/: backfill_data.py  backup_db.py  init_db.py  list_providers.py  run_backtest.py  run_dashboard.py  run_paper.py  run_walk_forward.py
tests/: conftest.py
tests/fixtures/dummy_provider/: provider.py
tests/unit/: test_alpaca_mappers.py  test_alpaca_provider.py  test_backtest.py  test_broker_isolation.py  test_domain.py  test_dummy_provider.py  test_enums.py  test_events.py  test_ingestion.py  test_models.py  test_position_sizer.py  test_registry.py  test_repositories.py  test_risk_manager.py  test_strategies.py
tests/unit/backtest/: test_slippage.py
tests/unit/execution/: test_trailing_stop.py
tests/unit/risk/: test_earnings_calendar.py  (+1 more)
trading-routines/: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  requirements.txt  trading_routines.py
trading-routines/prompts/: monthly.md  quarterly.md  system.md  weekly.md
(+1 files in other folders)
