[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Automated trading bot with multi-strategy support"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alpaca-py>=0.26",
    "pandas>=2.2",
    "numpy>=1.26",
    "apscheduler>=3.10",
    "loguru>=0.7",
    "structlog>=24.0",
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
    "PyYAML>=6.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
# pandas-ta requires Python >=3.12; install separately when available
# pip install "pandas-ta>=0.3.14b0"
indicators = [
    "pandas-ta>=0.3.14b0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "types-aiofiles>=23.0",
    "freezegun>=1.5",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "ANN", "RET", "N"]
ignore = [
    "ANN101",  # missing self annotation
    "ANN102",  # missing cls annotation
    "B008",    # do not perform function calls in default arguments (FastAPI pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"app/providers/alpaca/*.py" = ["TCH"]    # alpaca imports used at runtime (dicts, constructors)
"app/data/*.py" = ["TCH"]               # runtime imports for SQLModel session / domain types
"tests/fixtures/dummy_provider/*.py" = ["TCH"]  # test fixture, TC not relevant

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "pandas_ta",
    "pandas_ta.*",
    "alpaca.*",
    "apscheduler.*",
    "telegram.*",
    "structlog.*",
    "loguru.*",
    "asyncpg.*",
    "psycopg2.*",
    "uvicorn.*",
    "aiofiles.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=0"

[tool.coverage.run]
omit = ["tests/*", "app/data/migrations/*"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
